# focus-flow-widget

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CircularProgress.tsx  PomodoroTimer.tsx
src/hooks/: usePomodoro.ts
src/pages/: Index.tsx
src/test/: colorScheme.test.ts  sleepResilience.test.ts  usePomodoro.test.ts
