[package]
name = "focus-flow-widget"
version = "0.0.0"
description = "Focus Flow Pomodoro Timer"
authors = []
edition = "2021"

[lib]
name = "focus_flow_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow"], default-features = false }
